[tool.poetry]
name = "tkfeather"
version = "1.0.0-rc1"
description = "Feather icons for tkinter"
authors = ["John Riggles <jriggles@icloud.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/JRiggles/tkfeather"
keywords = ["tkinter", "icons", "Feather"]
include = ["tkfeather/icons"]

[tool.poetry.dependencies]
python = "^3.12"
pillow = ">=9.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
